# reservation

./: .env  Cargo.toml  README.md  deny.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: reservation.rs  reservation_status.rs
migrations/: 20241013044532_reservation_trigger.up.sql  20241013063604_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
service/: Cargo.toml
