[package]
name = "abi"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
prost = "0.13.3"
prost-types = "0.13.3"
sqlx = { workspace = true }
tonic = "0.12.3"
thiserror = "1.0.64"
regex = "1.11.0"

[build-dependencies]
anyhow = { workspace = true }
tonic-build = "0.12.3"
